--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -65,6 +65,24 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
+      <div class="row time-block" id="9">
+        <div class="col-md-1 hour">9am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block" id="10">
+        <div class="col-md-1 hour">10am</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
+      <div class="row time-block" id="17">
+        <div class="col-md-1 hour">5pm</div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      </div>
+
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script
@@ -73,6 +91,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
   </body>
 </html>
