--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         -->
 
       <!-- Example of a past time block. The "past" class adds a gray background color. -->
-      <div id="hour-9" class="row time-block past">
+      <div id="hour-9" class="row past">
         <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -49,7 +49,7 @@
       </div>
 
       <!-- Example of a a present time block. The "present" class adds a red background color. -->
-      <div id="hour-10" class="row time-block present">
+      <div id="hour-10" class="row present">
         <div class="col-2 col-md-1 hour text-center py-3">10AM</div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
@@ -65,23 +65,55 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
-      <div class="row time-block" id="9">
-        <div class="col-md-1 hour">9am</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      <div id="hour-12" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div class="row time-block" id="10">
-        <div class="col-md-1 hour">10am</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      <div id="hour-13" class="row future">
+        <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
 
-      <div class="row time-block" id="17">
-        <div class="col-md-1 hour">5pm</div>
-        <textarea class="col-md-10 description"></textarea>
-        <button class="col-md-1 saveBtn"><i class="fas fa-save"></i></button>
+      <div id="hour-14" class="row future">
+        <div class="col-2 col-md-1 hour text-center py-3">2PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
       </div>
+
+      <div id="hour-15" class="row future">
+        <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <div id="hour-16" class="row future">
+        <div class="col-2 col-md-1 hour text-center py-3">4PM</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+
+      <div id="hour-17" class="row time-block future">
+        <div class="col-2 col-md-1 hour text-center py-3">5pm</div>
+        <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
+        <button class="btn saveBtn col-2 col-md-1" aria-label="save">
+          <i class="fas fa-save" aria-hidden="true"></i>
+        </button>
+      </div>
+      
+      
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
